<resources>
    <string name="app_name">LocationTracker</string>
    <string name="my_tracks_title">My Tracks</string>
    <string name="my_tracks_new_track">New Track</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_description">Enter description</string>
    <string name="start">Start</string>
    <string name="test">Test</string>
    <string name="my_track">My Track</string>
    <string name="add_location_title">Add Location</string>
    <string name="add_location_add">Add</string>

    <string name="settings_sampling_rate">Sampling rate:</string>
    <string name="settings_enter_sampling_rate">Enter sampling rate</string>
    <string name="settings_speed">Speed:</string>
    <string name="settings_enter_speed">Enter speed</string>
    <string name="settings_home_city">Home city:</string>
    <string name="settings_title">Settings</string>
    <string name="settings_done">Done</string>
    <string name="settings_unit_seconds">s</string>
    <string name="settings_unit_speed">m/s</string>
    <string name="settings_latitude">LAT:</string>
    <string name="settings_latitude_format">LAT: %1$s °</string>
    <string name="settings_longitude">LONG:</string>
    <string name="settings_longitude_format">LONG: %1$s °</string>
    <string name="settings_altitude">ALT:</string>
    <string name="settings_altitude_format">ALT: %1$s m</string>
    <string name="settings_dialog_title">Invalid input</string>
    <string name="settings_dialog_message">Please input correct field values.</string>
    <string name="settings_dialog_ok">OK</string>
    <string name="settings_error_field_format">Please enter %1$s.</string>
    <string name="settings_field_sampling_rate">Sampling rate</string>
    <string name="settings_field_speed">Speed</string>

    <string name="new_track_title">New Track</string>
    <string name="new_track_start_track">Start</string>
    <string name="new_track_name">Name:</string>
    <string name="new_track_enter_name">Enter name</string>
    <string name="new_track_description">Description:</string>
    <string name="new_track_enter_description">Enter description</string>
    <string name="new_track_error_field_format">Please enter %1$s.</string>
    <string name="new_track_field_name">Name</string>
    <string name="new_track_field_description">Description</string>
    <string name="new_track_dialog_title">Invalid input</string>
    <string name="new_track_dialog_message">Please input correct field values.</string>
    <string name="new_track_dialog_ok">OK</string>

</resources>
