<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androidbootcamp.zoranmiladinovic.endava.locationtracker.MyTracksActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/textViewMyTracksTitle"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/my_tracks_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Settings button-->
    <ImageButton
        android:id="@+id/buttonSettings"
        style="@style/ImageButton"
        android:layout_alignEnd="@+id/textViewMyTracksTitle"
        android:layout_alignTop="@+id/textViewMyTracksTitle"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/settings_title"
        android:onClick="onOpenSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- New Track button -->
    <Button
        android:id="@+id/buttonNewTrack"
        style="@style/FooterButton"
        android:onClick="onNewTrack"
        android:text="@string/my_tracks_new_track"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
